<resources>
    <string name="app_name">Plant App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loading">Loading...</string>
    <string name="dark_mode">Dark mode</string>
    <string name="planting_date">Planting Date</string>
    <string name="plant_information">Plant Information</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="plant_type">Plant Type</string>
    <string name="wataring_frequency">Wataring Frequency</string>
    <string name="plant_name">Plant Name</string>
</resources>