<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:minWidth="300dp"
    android:orientation="vertical"
    android:padding="10dp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/plant_information"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="Ingredients"
        android:gravity="top|start"
        android:hint="@string/plant_name"/>

    <EditText
        android:id="@+id/etType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="Ingredients"
        android:gravity="top|start"
        android:hint="@string/plant_type"/>

    <EditText
        android:id="@+id/etFrequiency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints="Ingredients"
        android:gravity="top|start"
        android:hint="@string/wataring_frequency"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlantCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="30dp"
            android:text="@string/cancel"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlantAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:width="30dp"
            android:text="@string/add"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>